--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "private": true,
   "scripts": {
     "dev": "vite --host 127.0.0.1 --port 3000",
-    "build": "node tools/generate-llms.js || true && vite build",
+    "prebuild": "tsx tools/generate-llms.ts || true",
+    "build:server": "tsc -p tsconfig.server.json",
+    "build": "npm run build:server && vite build",
     "preview": "vite preview --host 127.0.0.1 --port 3000",
-    "start": "node server/index.js",
-    "test": "node --test server",
-    "test:server": "node server/testServer.js",
-    "test:watch": "node --test --watch server"
+    "start": "node dist-server/server/index.js",
+    "test": "tsx --test server",
+    "test:server": "tsx server/testServer.ts",
+    "test:watch": "tsx watch --test server",
+    "typecheck": "tsc --noEmit --pretty"
   },
   "dependencies": {
     "@emotion/is-prop-valid": "^1.2.1",
@@ -52,9 +55,13 @@
     "@babel/parser": "^7.27.0",
     "@babel/traverse": "^7.27.0",
     "@babel/types": "^7.27.0",
+    "@types/compression": "^1.8.1",
+    "@types/express": "^5.0.5",
     "@types/node": "^20.8.3",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
+    "@types/react-helmet": "^6.1.11",
+    "@types/serve-static": "^2.2.0",
     "@vitejs/plugin-react": "^4.0.3",
     "autoprefixer": "^10.4.16",
     "eslint": "^8.57.1",
@@ -62,6 +69,8 @@
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.3",
     "terser": "^5.39.0",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3",
     "vite": "^4.4.5"
   }
 }
